[package]
name = "chess_ai"
version = "0.1.0"
authors = ["Tony Jin <jsveron23@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.80"
web-sys = { version = "0.3.57", features = ['console'] }
js-sys = "0.3.57"

[profile.release]
lto = true
